src/test/ui/issues/issue-26548.stderr
error[E0391]: cycle detected when computing layout of `std::option::Option<S>`
   |
   = note: ...which requires computing layout of `S`...
   = note: ...which again requires computing layout of `std::option::Option<S>`, completing the cycle
note: cycle used when processing `main`
  --> $DIR/issue-26548.rs:9:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
